improvements in job filenames nd logistics